--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,10 @@ body {
     text-wrap: balance;
   }
 }
+.carte {
+  width: 400px;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 10px 20px;
+}
